--- a/index.html
+++ b/index.html
@@ -82,14 +82,37 @@
     </section>
 
 
-
-    <!-- 
-
-    <section class="about" id="about">
+    <section class="about container" id="about">
         <h1 class="heading">
             <span>about</span> us
         </h1>
+
+        <div class="row align-items-center">
+            <div class="col-md-6 image">
+                <img src="./assets/img/about.png" width="90%" alt="">
+            </div>
+
+            <div class="col-md-6 info">
+                <h2>the best interior design in the city</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum exercitationem dignissimos a illum blanditiis nam architecto eius esse deleniti deserunt harum vitae fugit laudantium cum ad, voluptate doloribus ea culpa.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eaque excepturi, deleniti ratione aut sapiente consequuntur architecto iure, consectetur tenetur tempora itaque corrupti. Porro quam dignissimos explicabo commodi quis blanditiis consectetur asperiores provident error facere.</p>
+                <div class="icons text-center">
+                    <a href="#" class="fab fa-facebook-f"></a>
+                    <a href="#" class="fab fa-twitter"></a>
+                    <a href="#" class="fab fa-instagram"></a>
+                    <a href="#" class="fab fa-linkedin"></a>
+                    <a href="#" class="fab fa-pinterest"></a>
+                </div>
+            </div>
+
+        </div>
+
     </section>
+
+
+    <!-- 
+
+
 
     <section class="menu" id="menu"> </section>
 
