--- a/index.html
+++ b/index.html
@@ -8,18 +8,11 @@
 
     <link rel="shortcut icon" href="./assets/img/" type="image/x-icon">
 
-    <!-- <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" /> -->
-
-    <!-- <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"> -->
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/style.min.css">
+    <!-- <link rel="stylesheet" href="./assets/css/style.css"> -->
 
-    <link rel="stylesheet" href="./assets/css/style.css">
-
-    <!-- <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js" defer></script> -->
     <script src="./assets/js/script.js" defer></script>
 
     <title>Architecture & Interior Design</title>
