--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="shortcut icon" href="./assets/img/fab-icon.png" type="image/x-icon">
-    
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/css/lightgallery.min.css">
-    
+
     <link rel="stylesheet" href="./assets/css/style.min.css">
     <!-- <link rel="stylesheet" href="./assets/css/style.css"> -->
 
@@ -191,7 +191,7 @@
 
     </section>
 
-    <section class="contact" id="contact"> 
+    <section class="contact" id="contact">
         <h1 class="heading">contact us projects</h1>
 
         <div class="contact-box-container mx-auto">
@@ -213,6 +213,61 @@
 
         </div>
 
+        <div class="form-container">
+            <form action="">
+                <div class="inputBox">
+                    <input type="text" placeholder="first name">
+                    <input type="text" placeholder="last name">
+                </div>
+                <input type="email" placeholder="e-mail">
+                <textarea cols="30" rows="10" placeholder="message"></textarea>
+                <input type="submit" value="send">
+            </form>
+        </div>
+
+    </section>
+
+    <section class="footer container-fluid">
+
+        <div class="row">
+            <div class="col-md-3  mb-4 lastLogo">
+                <h2> <img src="./assets/img/logo.png" alt="logo" /> </h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore sint doloribus aut, est ullam
+                    voluptatem obcaecati modi repellat fugit eveniet facere omnis ratione excepturi harum?</p>
+            </div>
+
+
+            <div class="col-md-3 mb-4">
+                <h2> Our Location </h2>
+                <div class="list">
+                    <a href="#">Banglasesh</a>
+                    <a href="#">india</a>
+                    <a href="#">france</a>
+                    <a href="#">japan</a>
+                </div>
+            </div>
+
+
+            <div class="col-md-3  mb-4">
+                <h2>Follow us</h2>
+                <div class="list">
+                    <a href="#">facebook</a>
+                    <a href="#">instagram</a>
+                    <a href="#">twitter</a>
+                    <a href="#">linkedin</a>
+                </div>
+            </div>
+
+
+            <div class="col-md-3  mb-4 text-center text-md-left letter">
+                <h2>newsletter</h2>
+                <p>subscribe for latest update</p>
+                <input type="email" placeholder="enter your email">
+                <input type="submit" value="Subscribe" placeholder="subscriber">
+            </div>
+        </div>
+
+        <h1 class="credit">created by <span>taiseen</span> | all rights reserved</h1>
     </section>
 
 
